--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -2,10 +2,10 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-bottom: 3%;
+    margin: 2% 9% 3% 9%;
 }
 
 .img{
-    max-width: 10%;
-    height: max-content;
+    width: 125px;
+    height: 44px;
 }
