--- a/src/styles/Banner.css
+++ b/src/styles/Banner.css
@@ -1,6 +1,6 @@
 .banner{
     position: relative;
-    margin: 0 9% 0 9%;
+    margin: 0 9% 3% 9%;
 }
 .imgBanner{
     border-radius: 25px;
@@ -13,7 +13,8 @@
     font-weight: 400;
     letter-spacing: 1.1px;
     position: absolute;
-    top: 40%;
-    left: 50%;
-    transform: translate(-40%, -50%);
+    top: 30%;
+    left: 40%;
+    transform: translate(-40%, -30%);
+    width: 100%;
 }
