--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -8,6 +8,20 @@ li{
     margin-left: 50px;
 }
 
-li:hover{
+a{
+    text-decoration: none;
+}
+
+a:active{
+    font-weight: bold;
+}
+
+a:hover{
     text-decoration: underline;
 }
+
+a:visited{
+    text-decoration: none;
+    color: #ff6060;
+}
+
