Réorganisation des fichiers de l'application

--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -12,16 +12,12 @@ a{
     text-decoration: none;
 }
 
-a:active{
-    font-weight: bold;
-}
-
-a:hover{
-    text-decoration: underline;
-}
-
 a:visited{
     text-decoration: none;
     color: #ff6060;
+}
+
+.pageActive{
+    text-decoration: underline;
 }
 
