--- a/src/styles/Propos.css
+++ b/src/styles/Propos.css
@@ -1,4 +1,7 @@
-.imgBanner{
+.propos{
+    margin: 0 9% 3% 9%;
+}
+.imgPropos{
     border-radius: 25px;
     filter:brightness(75%);
     max-width: 100%;
