--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 2% 9% 3% 9%;
+    margin: 2% 9%;
 }
 
 .img{
