Suppression de composants inutiles + modifications fichiers de style

--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -1,9 +1,8 @@
 .footer {
-  position: inherit;
-  bottom: 0;
   background: black;
   width: 100%;
   padding: 2%;
+  text-align: center;
 }
 .imgFooter {
   width: 100px;
