--- a/src/styles/Error.css
+++ b/src/styles/Error.css
@@ -1,8 +1,26 @@
-.errorPage{
-    color: #ff6060;
+.errorPage {
+  color: #ff6060;
+}
+
+.errorSection {
+    text-align: center;
+    margin: 10% 0 10% 0;
+}
+
+.errorCode {
+  font-size: 10rem;
+  margin: 0;
+  font-weight: bold;
+}
+.errorMsg {
+  font-size: 1.5rem;
+}
+
+.redirection {
+    text-decoration: underline;
+  font-size: 0.75rem;
 }
 
 .visited:visited {
-    color:black;
+  color: black;
 }
-
