--- a/src/styles/TexteAPropos.css
+++ b/src/styles/TexteAPropos.css
@@ -21,13 +21,17 @@
 .description {
   width: 78%;
   margin: auto;
-  margin-bottom: 2%;
+  margin-bottom: 3%;
   padding: 2%;
   text-align: justify;
   background: #f6f6f6;
   color: #ff6060;
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
+}
+
+svg{
+  margin-right: 10px;
 }
 
 svg:hover {
