Remplacement animation agrandissement pour chgt de couleur

--- a/src/styles/TexteAPropos.css
+++ b/src/styles/TexteAPropos.css
@@ -35,17 +35,5 @@ svg{
 }
 
 svg:hover {
-  animation-duration: 2s;
-  animation-name: agrandissement;
-  animation-iteration-count: inherit;
-}
-
-@keyframes agrandissement {
-  from {
-    transform: scale(1);
-  }
-
-  to {
-    transform: scale(1.5);
-  }
+  color: grey;
 }
