--- a/src/styles/HousePage.css
+++ b/src/styles/HousePage.css
@@ -66,7 +66,13 @@ span {
   border-radius: 10px;
   margin-right: 5px;
   display: inline-block;
-  width: 125px;
+  width: 150px;
   text-align: center;
   font-size: 14px;
+}
+
+.equipments{
+  display: flex;
+  width: 90%;
+  margin: auto;
 }
