--- a/src/styles/TexteAPropos.css
+++ b/src/styles/TexteAPropos.css
@@ -1,13 +1,11 @@
 .title {
   display: flex;
   align-items: center;
-  width: 80%;
-  margin: auto;
   margin-top: 2%;
   justify-content: space-between;
   background: #ff6060;
   padding: 1%;
-  height: 15px;
+  height: 30px;
   color: white;
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
@@ -19,7 +17,6 @@
 }
 
 .description {
-  width: 78%;
   margin: auto;
   margin-bottom: 3%;
   padding: 2%;
@@ -35,5 +32,5 @@ svg{
 }
 
 svg:hover {
-  color: grey;
+  color: #ccc;
 }
