--- a/src/styles/Banner.css
+++ b/src/styles/Banner.css
@@ -18,3 +18,35 @@
   transform: translate(-40%, -30%);
   font-size: 2rem;
 }
+
+@media screen and (max-width: 1112px) {
+  .msgBanner {
+    font-size: 1.5rem;
+  }
+}
+
+@media screen and (max-width: 854px) {
+  .msgBanner {
+    font-size: 1.25rem;
+  }
+}
+
+@media screen and (max-width: 724px) {
+  .msgBanner {
+    font-size: 1rem;
+  }
+}
+
+@media screen and (max-width: 594px) {
+  .msgBanner {
+    letter-spacing: 0;
+  }
+}
+
+@media screen and (max-width: 521px) {
+  .msgBanner {
+    font-size: 0.75rem;
+  }
+}
+
+
