--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -19,3 +19,17 @@ a:visited {
     text-transform: uppercase;
   }
 }
+
+@media screen and (max-width: 408px) {
+  a {
+    margin-left: 10px;
+  }
+}
+
+@media screen and (max-width: 372px) {
+  a {
+    margin-left: 5px;
+  }
+}
+
+
