--- a/src/styles/HousePage.css
+++ b/src/styles/HousePage.css
@@ -48,6 +48,7 @@ span {
   padding: 1%;
   border-radius: 10px;
   margin-right: 5px;
+  margin-top: 5px;
   display: inline-block;
   width: 125px;
   text-align: center;
@@ -57,6 +58,7 @@ span {
 .blocDescription {
   display: flex;
   align-content: space-evenly;
+  margin-bottom: 3%;
 }
 
 .equipments {
