--- a/src/styles/HousesList.css
+++ b/src/styles/HousesList.css
@@ -28,3 +28,9 @@
   left: 45%;
   transform: translate(-45%, -70%);
 }
+
+@media screen and (max-width: 889px) {
+  .housesList {
+    background-color: transparent;
+  }
+}
